#210: Fixed modal overflow and alignment

--- a/website/src/common/component/layout/Modal/modal.css
+++ b/website/src/common/component/layout/Modal/modal.css
@@ -14,21 +14,20 @@
 	opacity: 50%;
 }
 
-.modal > .modal-header {
+.modal > .modal-content > .modal-header {
 	align-items: center;
 	background: var(--primary-color);
 	color: var(--secondary-color);
 	display: flex;
 	justify-content: center;
-	padding: 1rem 1rem 1rem 2rem;
+	padding: 1rem;
 }
 
-.modal > .modal-header > h1 {
+.modal > .modal-content > .modal-header > h1 {
 	flex: 1;
-	text-align: center;
 }
 
-.modal > .modal-header > button {
+.modal > .modal-content > .modal-header > button {
 	align-items: center;
 	background: none;
 	border: none;
@@ -37,16 +36,17 @@
 	padding: 0px;
 }
 
-.modal > .modal-header > button:hover {
+.modal > .modal-content > .modal-header > button:hover {
 	cursor: pointer;
 }
 
-.modal > .modal-header > button > .icon:hover {
+.modal > .modal-content > .modal-header > button > .icon:hover {
 	transform: scale(110%);
 }
 
-.modal > .modal-body {
+.modal > .modal-content > .modal-body {
 	height: 100%;
 	padding: 1rem;
 	width: 100%;
+	overflow: auto;
 }
